Fixed z-index of text mode (so that separator does not show)

--- a/css/learn.css
+++ b/css/learn.css
@@ -392,7 +392,7 @@ body {
     bottom:0;
     width:100%;
     background-color:#DFDFDF;
-    z-index:2;
+    z-index:3;
     text-align:center;
 }
 
